# FoodieBot

./: README.md  Readme-Foodiebot.md  System Working Demo
Complete System Package/: .env  app.py  pyproject.toml
Complete System Package/backend/: analytics_service.py  config.py  conversation_service.py  database.py  gemini_service.py  main.py  models.py  product_generator.py  recommendation_engine.py
Complete System Package/frontend/: analytics_dashboard.py  chat_interface.py  product_search.py
Product Generation Documentation/: products.csv
